--- a/css/stylepr.css
+++ b/css/stylepr.css
@@ -1,10 +1,8 @@
-/*PROGRAMACION FORM------------------------------------------------------------------------------------------------------*/
+/*CSS FORM------------------------------------------------------------------------------------------------------*/
 
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background: #f4f4f4;
 }
 
@@ -53,4 +51,87 @@ body {
 
 .campo-formulario button:hover {
     background-color: #004494;
+}
+
+/*CSS Calculadora--------------------------------------*/
+
+
+.calculadora {
+    font-family: Arial, sans-serif;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+    max-width: fit-content;
+    max-height: fit-content;
+    margin: 20px auto;
+}
+
+
+.calculadora input[type="number"] {
+    padding: 10px;
+    margin: 5px;
+    width: calc(50% - 12px); 
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    display: inline-block; 
+}
+
+.grid-box {
+    display: flex;
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    background-color: white;
+  }
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  
+  }
+  
+  .grid-item {
+    display: flex;
+    justify-content: center;
+    background-color: lavender;
+    align-content: center;
+    padding: 5px;
+  
+  }
+
+
+.calculadora button {
+    display: flex;
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    color: #fff;
+    background-color: #0078f1;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.calculadora button:hover {
+    background-color: #0056b3;
+}
+
+.calculadora #resultado {
+    margin-top: 15px;
+    display: block; 
+}
+
+.textoprogramacion {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
+    max-width: 70em;
+    max-height: 10em;
+    margin: 20px auto;
+    text-align: center;
 }
